# parser-rust

./: Cargo.toml  README.md
src/: cli.yml  main.rs  parse.rs  structs.rs  utils.rs
src/entities/: weapons.rs
src/helpers/: logger.rs
src/structs/: raw.rs
src/structs/parsed/: weapons.rs
src/structs/raw/: common.rs  equip_affix_excel_config_data.rs  material_codex_excel_config_data.rs  material_excel_config_data.rs  material_source_excel_config_data.rs  weapon_codex_excel_config_data.rs  weapon_curve_excel_config_data.rs  weapon_excel_config_data.rs  weapon_level_excel_config_data.rs  weapon_promote_excel_config_data.rs  weapon_shared.rs
src/utils/: output.rs  readable.rs  remove_xml.rs  texthash.rs
