[package]
name = "genshin-data-parser"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
anyhow = "1.0.40"
colored = "2.0.0"
strum = "0.21.0"
strum_macros = "0.21.1"
